# language

./: .gitignore  .readthedocs.yml  .travis.yml  Dockerfile  LICENSE  Makefile  README.md  SCORING_FLOW.md  environment_lock.yml  mock_data.py  pyproject.toml  pytest.ini  run_test_coverage.sh  setup.py
.circleci/: config.yml
.github/workflows/: README.md  automerge_plugin-only_prs.yml  call_endpoints.py  call_jenkins.py  metadata_handler.yml  parse_changed_files.py  plugin_submission_mutate.yml  plugin_submission_orchestrator.yml  plugin_submission_prepare.yml  plugin_submission_validate.yml  pylint.yml  score_automatically_merged_plugins.yml  score_new_plugins.yml  test_jenkins_trigger.yml  test_post_merge_scoring.yml  travis_trigger.sh  user_notification_handler.yml
brainio/: __init__.py  assemblies.py  catalogs.py  fetch.py  lookup.py  packaging.py  stimuli.py  transform.py
brainscore_core/: __init__.py
brainscore_core/benchmarks/: __init__.py
brainscore_core/metrics/: accuracy.py  ceiling.py  cka.py  correlation.py  distribution_similarity.py  ost.py  rdm.py  regression.py  transformations.py  xarray_utils.py
brainscore_core/submission/: __main__.py  configuration.py  database.py  evaluation.py  ml_pool.py  repository.py
brainscore_language/: __init__.py  __main__.py  artificial_subject.py  brainmodel.py  document_plugins.py  toolbox.py
brainscore_language/benchmark_helpers/: __init__.py
brainscore_language/benchmarks/: __init__.py  benchmark_bag.py  pereira2018.py  predict_word_bag.py  simple_next_word.py
brainscore_language/benchmarks/blank2014/: __init__.py  benchmark.py  ceiling.py  test.py
brainscore_language/benchmarks/fedorenko2016/: __init__.py  benchmark.py
brainscore_language/benchmarks/futrell2018/: __init__.py  benchmark.py  test.py
brainscore_language/benchmarks/futrell2018_gam/: __init__.py  benchmark.py  conda.yml  environment.yml  test.py
brainscore_language/benchmarks/pereira2018/: __init__.py  benchmark.py  ceiling_packaging.py  test.py  unified.py
brainscore_language/benchmarks/pereira2018_v2022/: __init__.py  benchmark.py  ceiling_packaging.py  test.py
brainscore_language/benchmarks/syntaxgym/: README.md  __init__.py  benchmark.py  gpt2_precomputed.py  requirements.txt  sg_prediction.py  sg_suite.py  test.py  test_suite2.json  test_suite3.json  test_suites.json  test_suites.py
brainscore_language/compat/: unified_adapter.py
brainscore_language/metrics/: __init__.py  metric.py
brainscore_language/model_helpers/: container.py  embedding.py  huggingface.py  localize.py  modeling_suma.py  parser.py  preprocessing.py  readme.md
brainscore_language/models/: __init__.py  conftest.py  huggingface.py  readme.md
brainscore_language/plugin_management/: README.md  conda_score.py  conda_score.sh  create_bib.py  document_plugins.py  environment_manager.py  import_plugin.py  plugin_dependency_handler.py  run_plugin.sh  score.py  score_model.sh  test_plugin.sh  test_plugins.py
brainscore_language/plugins/: README.md  create_env.sh  run_plugin.sh  run_tests.py  test_plugins.py
brainscore_language/plugins/sg_targeted_syntactic_evaluation/: benchmark.py  data.py  pyproject.toml  test.py  test_suite.json  unit_test.py
brainscore_language/submission/: README.md  actions_helpers.py  config.py  endpoints.py  hardcoded_metadata.py
brainscore_language/utils/: __init__.py  ceiling.py  document_plugins.py  local.py  preprocessing.py  s3.py  transformations.py
docs/: requirements.txt
docs/source/: conf.py  examples.md  index.rst
docs2/: document_plugins.py
docs2/source/: index.rst
examples/: README.md  compare_within_species.ipynb  mock_data.ipynb  score.ipynb  score_layer.py  score_layers.ipynb  score_layers.py  score_localization.py  score_suma.py  test_distilgpt2_vs_pereira18.py  test_mean_froi_neural_control_subject1_data.py  test_mean_froi_pereira2018_firstsessions.py  test_mock_data.py  test_voxel_pereira_all.py  xarray_sandbox.py  xarray_test_1.py  xarray_test_2.py  xarray_test_3.py
langbrainscore/: __init__.py  __main__.py
langbrainscore/analysis/: representations.py
langbrainscore/benchmark_packaging/: package_benchmarks.py
langbrainscore/benchmarks/: __init__.py  pereira2018.py
langbrainscore/brainscore/: __init__.py  brainscore.py
langbrainscore/dataset/: __init__.py  dataset.py
langbrainscore/encoder/: __init__.py  ann.py  ann_edited.py  anntest.py  brain.py
langbrainscore/encoding/: brain.py  silico.py
langbrainscore/interface/: __init__.py  brainscore.py  cacheable.py  dataset.py  encoder.py  mapping.py  metric.py  metrics.py
langbrainscore/mapping/: __init__.py  mapping.py  rsa.py
langbrainscore/mapping_tools/: __init__.py  mapping.py  ridge.py
langbrainscore/metrics/: __init__.py  metric.py  pearson_r.py  rank_acc.py  rsa.py
langbrainscore/models/: encoder.py
langbrainscore/utils/: cache.py  cache_utils.py  encoder.py  encoder_utils.py  logging.py  preprocessing.py  resources.py  s3_utils.py  stim_utils.py  stimuli_utils.py  xarray.py
notebooks/: 8apr.txt
tests/: README.md  dummy.py  test___init__.py  test_ann_encoder.py  test_caching.py  test_conda_score.py  test_dataset_from_file.py  test_dummy.py  test_examples.py  test_identical.py  test_integration.py  test_kv_cache.py  test_mock_data.py  test_preflight.py  test_test_plugins.py  test_unified_adapter.py
tests/test_model_helpers/: mini_embeddings.word2vec  test_container.py  test_embedding.py  test_huggingface.py  test_preprocessing.py
tests/test_models/: test_huggingface.py
tests/test_plugin_management/: test_conda_score.py  test_environment_manager.py  test_import_plugin.py  test_test_plugins.py
tests/test_submission/: mock_config.py  test_endpoints.py
tests/test_utils/: test_preprocessing.py
(+258 files in other folders)
