################################################################
#### project config ####
################################################################

[project]
name = "brainscore_language"
version = "0.1.0"
description = ""
authors = []
license = { 'file' = 'LICENSE' }
readme = "README.md"
requires-python = ">=3.7"

dependencies = [
    "tqdm",
    "numpy>=1.21",
    "brainscore_core@git+https://github.com/brain-score/core.git",
    "brainio@git+https://github.com/brain-score/brainio.git",
    "fire",
    # model_helpers dependencies
    "torch>=1.9.1",
    "transformers>=4.11.3",
    # FIXME
    "scikit-learn==1.1.2",
    "boto3==1.25.0",
    "botocore==1.28.0",
    "pandas==1.3.5",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-check",
    "gensim",
    "joblib",
]

[build-system]
requires = [
    "setuptools>=65.*",
    "wheel"
]


################################################################
#### mypy type-checking config ####
################################################################

[tool.mypy]
ignore_missing_imports = true


[tool.pytest.ini_options]
testpaths = [
    "tests"
]

filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::FutureWarning"
]

markers = [
    "memory_intense",
    "travis_slow",
    "slow",
]


################################################################
#### setuptools packaging config ####
################################################################

[tool.setuptools.package-data]
# include non-python files (e.g. 'requirements.txt') in package install
"brainscore_language.benchmarks" = ["**"]
"brainscore_language.data" = ["**"]
"brainscore_language.metrics" = ["**"]
"brainscore_language.models" = ["**"]
