################################################################
#### project config ####
################################################################

[project]
name = "brainscore_language"
version = "2.2.1"
description = ""
authors = []
license = { 'file' = 'LICENSE' }
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "tqdm",
    "numpy>=1.21",
    "brainscore-core",
    "fire",
    "scikit-learn",
    # model_helpers dependencies
    "torch>=1.9.1",
    "transformers>=4.11.3",
    "gensim",
    "joblib",
    # submission dependencies
    "requests"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-check<=1.3.0",
]

[build-system]
requires = [
    "setuptools>=65",
    "wheel"
]


################################################################
#### mypy type-checking config ####
################################################################

[tool.mypy]
ignore_missing_imports = true


[tool.pytest.ini_options]
testpaths = [
    "tests"
]

filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::FutureWarning"
]

markers = [
    "memory_intense",
    "travis_slow",
    "slow",
    "private_access",
]


################################################################
#### setuptools packaging config ####
################################################################

[tool.setuptools.package-data]
# include non-python files (e.g. 'requirements.txt') in package install
"brainscore_language.benchmarks" = ["**"]
"brainscore_language.data" = ["**"]
"brainscore_language.metrics" = ["**"]
"brainscore_language.models" = ["**"]

[tool.codespell]
# Ref: https://github.com/codespell-project/codespell#using-a-config-file
skip = '.git*,*.csv,*.json,data'
check-hidden = true
ignore-regex = '^\s*"image/\S+": ".*'
# ignore-words-list = ''
